order systemd service after notification daemons

--- a/systemd/netlink-notify.service
+++ b/systemd/netlink-notify.service
@@ -1,6 +1,9 @@
 [Unit]
 Description=Netlink Notification
 Requires=dbus.socket
+PartOf=graphical-session.target
+# Order after notification daemons to make sure it is stopped before.
+After=dunst.service xfce4-notifyd.service
 ConditionUser=!@system
 
 [Service]
